Fixed layout of Banner on tablet-media.

--- a/src/components/Banner/styles.module.css
+++ b/src/components/Banner/styles.module.css
@@ -102,7 +102,8 @@
 @media screen and (min-width: 768px) {
   .content {
     flex-grow: 1;
-    padding: 214px 62px 185px 69px;
+    padding: 154px 62px 185px 69px;
+    text-align: initial;
   }
 
   .content::after {
