--- a/src/components/Text/styles.module.css
+++ b/src/components/Text/styles.module.css
@@ -7,7 +7,6 @@
 .banner {
   position: relative;
   z-index: 50;
-  margin-bottom: 10px;
   text-align: left;
 }
 
